logs/validate.20260408-053245.log
Mode: isolate
<<<<<<< HEAD
Isolate: including Chap19 Chap27 Chap02
verification results:: 945 verified, 0 errors
Elapsed: 7s
Sampled Memory Usage: peak rust_verify RSS: 2507MB, peak z3 RSS: 358MB, min free: 24025MB
Sampled CPU Usage: rust_verify: 24s, z3 children: 6s
=======
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error[E0004]: non-exhaustive patterns: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
   --> src/Chap37/BSTRBStEph.rs:333:15
    |
333 |         match self {
    |               ^^^^ pattern `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
    |
note: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>` defined here
   --> src/Chap23/BalBinTreeStEph.rs:65:14
    |
 65 |     pub enum BalBinTree<T> {
    |              ^^^^^^^^^^
 66 |         Leaf,
    |         ---- not covered
    = note: the matched value is of type `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
423 ~             },
424 +             Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf => todo!()
    |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
Elapsed: 9s
Sampled Memory Usage: peak rust_verify RSS: 2446MB, peak z3 RSS: 250MB, min free: 23949MB
Sampled CPU Usage: rust_verify: 24s, z3 children: 10s
>>>>>>> agent4/ready
